feat: 将流量告警移动至common包下

--- a/wzkris-common/wzkris-common-sentinel/pom.xml
+++ b/wzkris-common/wzkris-common-sentinel/pom.xml
@@ -26,5 +26,12 @@
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
         </dependency>
 
+        <!-- Sentinel Datasource Nacos -->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+        </dependency>
+
     </dependencies>
+
 </project>
