--- a/wzkris-gateway/pom.xml
+++ b/wzkris-gateway/pom.xml
@@ -44,15 +44,10 @@
             <artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>
         </dependency>
 
+        <!-- 限流 -->
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
-        </dependency>
-
-        <!-- Sentinel Datasource Nacos -->
-        <dependency>
-            <groupId>com.alibaba.csp</groupId>
-            <artifactId>sentinel-datasource-nacos</artifactId>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-sentinel</artifactId>
         </dependency>
 
         <!-- SpringBoot Actuator -->
