--- a/wzkris-common/pom.xml
+++ b/wzkris-common/pom.xml
@@ -30,6 +30,7 @@
         <module>wzkris-common-orm</module>
         <module>wzkris-common-oss</module>
         <module>wzkris-common-redis</module>
+        <module>wzkris-common-redis-ratelimiter</module>
         <module>wzkris-common-seata</module>
         <module>wzkris-common-security</module>
         <module>wzkris-common-sentinel</module>
