--- a/wzkris-auth/wzkris-auth-biz/src/main/resources/application.yml
+++ b/wzkris-auth/wzkris-auth-biz/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: wzkris-auth
   profiles:
     active: @profiles.active@
-    include: dubbo, feign
+    include: feign
   cloud:
     nacos:
       server-addr: @nacos.server@
