--- a/wzkris-modules/wzkris-modules-user/wzkris-user-biz/src/main/resources/application.yml
+++ b/wzkris-modules/wzkris-modules-user/wzkris-user-biz/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: wzkris-user
   profiles:
     active: @profiles.active@
-    include: dubbo, feign
+    include: feign
   cloud:
     nacos:
       server-addr: @nacos.server@
