chore: 调整客户三方登录代码

--- a/wzkris-auth/wzkris-auth-biz/pom.xml
+++ b/wzkris-auth/wzkris-auth-biz/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>wzkris-common-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-weixin-sdk</artifactId>
+        </dependency>
+
         <!--本地rpc服务-->
         <dependency>
             <groupId>com.wzkris</groupId>
