refactor: 网关统一认证

--- a/wzkris-gateway/pom.xml
+++ b/wzkris-gateway/pom.xml
@@ -56,6 +56,16 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-auth-rmi</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-openfeign</artifactId>
+        </dependency>
+
         <!-- 均衡负载-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
