--- a/wzkris-common/wzkris-common-security/pom.xml
+++ b/wzkris-common/wzkris-common-security/pom.xml
@@ -20,7 +20,12 @@
 
         <dependency>
             <groupId>com.wzkris</groupId>
-            <artifactId>wzkris-auth-rmi</artifactId>
+            <artifactId>wzkris-common-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-context</artifactId>
         </dependency>
 
         <!-- Spring OAuth2资源服务器-->
