feat: 服务间调用验签过滤器

--- a/wzkris-bom/pom.xml
+++ b/wzkris-bom/pom.xml
@@ -22,7 +22,15 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- 核心模块 -->
+
+            <!-- api密钥模块 -->
+            <dependency>
+                <groupId>com.wzkris</groupId>
+                <artifactId>wzkris-common-apikey</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <!-- 验证码模块 -->
             <dependency>
                 <groupId>com.wzkris</groupId>
                 <artifactId>wzkris-common-captcha</artifactId>
