--- a/wzkris-common/pom.xml
+++ b/wzkris-common/pom.xml
@@ -18,6 +18,7 @@
     </description>
 
     <modules>
+        <module>wzkris-common-apikey</module>
         <module>wzkris-common-captcha</module>
         <module>wzkris-common-core</module>
         <module>wzkris-common-datasource</module>
