--- a/wzkris-common/wzkris-common-apikey/pom.xml
+++ b/wzkris-common/wzkris-common-apikey/pom.xml
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -10,10 +9,10 @@
         <version>${revision}</version>
     </parent>
 
-    <artifactId>wzkris-common-security</artifactId>
+    <artifactId>wzkris-common-apikey</artifactId>
 
     <description>
-        wzkris-common-security安全模块
+        提供基础API防护
     </description>
 
     <dependencies>
@@ -29,16 +28,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.wzkris</groupId>
-            <artifactId>wzkris-common-apikey</artifactId>
-        </dependency>
-
-        <!-- Spring OAuth2资源服务器-->
-        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
-
     </dependencies>
 
 </project>
