--- a/wzkris-common/wzkris-common-openfeign/pom.xml
+++ b/wzkris-common/wzkris-common-openfeign/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-apikey</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-okhttp</artifactId>
         </dependency>
