fix: 监控服务也同样加签

--- a/wzkris-extends/wzkris-monitor-admin/pom.xml
+++ b/wzkris-extends/wzkris-monitor-admin/pom.xml
@@ -23,7 +23,7 @@
 
         <dependency>
             <groupId>com.wzkris</groupId>
-            <artifactId>wzkris-common-core</artifactId>
+            <artifactId>wzkris-common-apikey</artifactId>
         </dependency>
 
         <!-- SpringBoot admin -->
