--- a/wzkris-gateway/src/main/resources/application-dev.yml
+++ b/wzkris-gateway/src/main/resources/application-dev.yml
@@ -31,4 +31,5 @@ spring:
   config:
     import:
       - optional:nacos:common.yml?group=COMMON_GROUP
+      - optional:nacos:redis.yml?group=COMMON_GROUP
       - optional:nacos:${spring.application.name}.yml
