demo: 增加spring-cloud-stream的使用示例

--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,7 @@
     <modules>
         <module>wzkris-auth</module>
         <module>wzkris-bom</module>
+        <module>wzkris-demo/wzkris-mq-demo</module>
         <module>wzkris-gateway</module>
         <module>wzkris-extends</module>
         <module>wzkris-modules</module>
