fix: 修复微信登录相关的问题

--- a/wzkris-auth/wzkris-auth-biz/src/main/resources/application.yml
+++ b/wzkris-auth/wzkris-auth-biz/src/main/resources/application.yml
@@ -7,3 +7,11 @@ spring:
   profiles:
     active: @profiles.active@
     include: feign
+
+weixin:
+  miniapp:
+    enable: true
+    use-redis: true
+    configs:
+      - appid: xxx
+        secret: xxx
