upgrade: springcloud-dependencies 2025.0.0 upgrade: springboot 3.5.0 upgrade: springcloud-alibaba-dependencies 2025.0.0 update: 网关配置同步更新版本

--- a/wzkris-gateway/pom.xml
+++ b/wzkris-gateway/pom.xml
@@ -20,10 +20,16 @@
     </properties>
 
     <dependencies>
-        <!-- SpringCloud Gateway -->
+        <!-- SpringCloud Gateway功能 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <artifactId>spring-cloud-gateway-server-webflux</artifactId>
+        </dependency>
+
+        <!-- SpringCloud Gateway Starter-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
 
         <!-- SpringCloud Alibaba Nacos -->
