--- a/wzkris-common/wzkris-common-loadbalancer/pom.xml
+++ b/wzkris-common/wzkris-common-loadbalancer/pom.xml
@@ -13,8 +13,14 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <!--  均衡负载-->
