feat: 增加微信异常的拦截

--- a/wzkris-common/wzkris-common-weixin-sdk/pom.xml
+++ b/wzkris-common/wzkris-common-weixin-sdk/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!--微信小程序-->
         <dependency>
             <groupId>com.github.binarywang</groupId>
