feat: 增加httpservice的灰度请求

--- a/wzkris-common/wzkris-common-httpservice/pom.xml
+++ b/wzkris-common/wzkris-common-httpservice/pom.xml
@@ -24,8 +24,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-loadbalancer</artifactId>
         </dependency>
 
         <dependency>
