--- a/wzkris-common/wzkris-common-web/pom.xml
+++ b/wzkris-common/wzkris-common-web/pom.xml
@@ -25,6 +25,11 @@
 
         <dependency>
             <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-apikey</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.wzkris</groupId>
             <artifactId>wzkris-common-validator</artifactId>
         </dependency>
 
