feat: 配置demo-client

--- a/wzkris-demo/oauth2-client-demo/pom.xml
+++ b/wzkris-demo/oauth2-client-demo/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>spring-security-oauth2-client</artifactId>
         </dependency>
 
+        <!--模板引擎-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
