feat: 整合sentinel模块和notifier模块，增加限流通知告警

--- a/wzkris-common/wzkris-common-sentinel/pom.xml
+++ b/wzkris-common/wzkris-common-sentinel/pom.xml
@@ -32,6 +32,13 @@
             <artifactId>sentinel-datasource-nacos</artifactId>
         </dependency>
 
+        <!-- Notifier for alerts -->
+        <dependency>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-notifier</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
 </project>
